--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+echo '<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HOWMAYAI Restaurant Reservations</title>
-</head>
-<body>
-    <h1>HOWMAYAI Restaurant Reservations</h1>
+  </head>
+  <body>
     <div id="root"></div>
-</body>
-</html>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+</html>' > index.html
